UnitedSolar/force-app/main/default/objects/Payment_Receipt__c/fields/Accounts__c.field-meta.xml
<CustomField>
    <fullName>Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Receipts_Account2</relationshipName>
    <type>Lookup</type>
</CustomField>