UnitedSolar/force-app/main/default/objects/Payment_Receipt__c/fields/Amount_owed__c.field-meta.xml
<CustomField>
    <fullName>Amount_owed__c</fullName>
    <description>total amount needed to pay off the product</description>
    <label>Amount_Owed</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>