UnitedSolar/force-app/main/default/objects/Payment_Receipt__c/validationRules/LessThan.validationRule-meta.xml
<ValidationRule>
    <fullName>LessThan</fullName>
    <active>true</active>
    <errorConditionFormula>Amount_Paid__c  &gt;  Amount_owed__c</errorConditionFormula>
    <errorDisplayField>Amount_Paid__c</errorDisplayField>
    <errorMessage>You don&apos;t owe that much for the product</errorMessage>
</ValidationRule>